--- a/Fullstack_Blog/.env
+++ b/Fullstack_Blog/.env
@@ -1,7 +1,7 @@
-MONGO_URL=mongodb+srv://gmansi887:WthDFxtkVhPcNiii@fullstackblogv3.tbqch6m.mongodb.net/fullstack-Blog?retryWrites=true&w=majority
+MONGO_URL="mongodburl"
 
-SESSION_KEY=mysessionkey12345678
-CLOUDINARY_CLOUD_NAME=dpjd09lk5
-CLOUDINARY_KEY=878365257876955
-CLOUDINARY_SECRETKEY=31hLTVgUpcDAbMGZtaxB9J0a6BI
+SESSION_KEY="sessionkey"
+CLOUDINARY_CLOUD_NAME=dlk5
+CLOUDINARY_KEY=xxxxxxxxxxxxxxx
+CLOUDINARY_SECRETKEY=xxxxxxxxxxxxxxx
 
